# glfwcxx

./: .cmake-format.json  CMakeLists.txt  conanfile.py
.github/workflows/: cd.yml  ci.yml
cmake/: Packages.cmake  ProjectUtils.cmake  TestUtils.cmake
src/: CMakeLists.txt
src/glfwcxx/common/: CMakeLists.txt  Common.cpp  CommonStub.cpp
src/glfwcxx/common/include/common/glfwcxx/: Common.hpp
src/glfwcxx/common/include/stub/glfwcxx/: CommonStub.hpp
src/glfwcxx/core/: CMakeLists.txt  Core.cpp  CoreInitHints.cpp  CoreStub.cpp
src/glfwcxx/core/include/core/glfwcxx/: Core.hpp  CoreInitHints.hpp
src/glfwcxx/core/include/stub/glfwcxx/: CoreStub.hpp
src/glfwcxx/glfw/: CMakeLists.txt  GlfwCore.cpp
src/glfwcxx/glfw/include/glfwcxx/: GlfwCore.hpp
src/glfwcxx/window/: CMakeLists.txt  KeyboardHelper.cpp  Window.cpp  WindowHelper.cpp  WindowHints.cpp  WindowStub.cpp
src/glfwcxx/window/include/helper/glfwcxx/: KeyboardHelper.hpp  WindowHelper.hpp
src/glfwcxx/window/include/stub/glfwcxx/: WindowStub.hpp
src/glfwcxx/window/include/window/glfwcxx/: KeyboardInput.hpp  Window.hpp  WindowHints.hpp  WindowProperties.hpp
src/glfwstub/: CMakeLists.txt  glfw3.cpp
src/glfwstub/include/GLFW/: glfw3.h
test_package/: CMakeLists.txt  conanfile.py
test_package/glfwcxx/: CMakeLists.txt  main.cpp
test_package/glfwcxxstub/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/glfwcxx/: CMakeLists.txt  test_Common.cpp  test_Core.cpp  test_GlfwCore.cpp  test_Window.cpp
