set(CURRENT_TARGET glfwstub)
set(CURRENT_TARGET_ALIAS stub::glfw)

add_library(${CURRENT_TARGET} STATIC glfw3.cpp)
target_include_directories(
    ${CURRENT_TARGET}
    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
    PUBLIC $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/generated/include>)

add_library(${CURRENT_TARGET_ALIAS} ALIAS ${CURRENT_TARGET})

set(EXPORT_FILE ${PROJECT_BINARY_DIR}/generated/include/GLFW/export.hpp)
generate_export_header(${CURRENT_TARGET} EXPORT_FILE_NAME ${EXPORT_FILE} PREFIX_NAME GLFW_API_)

install(
    TARGETS ${CURRENT_TARGET}
    EXPORT ${CURRENT_TARGET}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    INCLUDES
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/GLFW DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(FILES ${EXPORT_FILE} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/GLFW)
