set(CURRENT_TARGET core)
set(CURRENT_STUB_TARGET ${CURRENT_TARGET}-stub)

set(SOURCES GlfwCore.cpp)

add_library(${CURRENT_TARGET} STATIC ${SOURCES})
target_include_directories(
    ${CURRENT_TARGET}
    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
    PUBLIC $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/generated/include>)
target_link_libraries(${CURRENT_TARGET} PRIVATE $<BUILD_INTERFACE:glfw::glfw>)

add_library(${CURRENT_STUB_TARGET} STATIC ${SOURCES})
target_include_directories(
    ${CURRENT_STUB_TARGET}
    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
    PUBLIC $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/generated/include>)
target_link_libraries(${CURRENT_STUB_TARGET} PUBLIC $<BUILD_INTERFACE:stub::glfw>)

set(EXPORT_FILE ${PROJECT_BINARY_DIR}/generated/include/glfwcxx/export_core.hpp)
generate_export_header(${CURRENT_TARGET} EXPORT_FILE_NAME ${EXPORT_FILE} PREFIX_NAME GLFWCXX_API_)

install(
    TARGETS ${CURRENT_TARGET}
    EXPORT ${CURRENT_TARGET}Targets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    INCLUDES
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(
    TARGETS ${CURRENT_STUB_TARGET}
    EXPORT ${CURRENT_STUB_TARGET}Targets
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    INCLUDES
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/glfwcxx DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(FILES ${EXPORT_FILE} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/glfwcxx)
